[gd_scene load_steps=25 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/finish_screen2.png" type="Texture" id=3]
[ext_resource path="res://art/finish_screen1.png" type="Texture" id=4]
[ext_resource path="res://art/menu.png" type="Texture" id=5]
[ext_resource path="res://art/buttons/button1.png" type="Texture" id=6]
[ext_resource path="res://art/buttons/button2.png" type="Texture" id=7]
[ext_resource path="res://art/buttons/button3.png" type="Texture" id=8]
[ext_resource path="res://art/buttons/sound_off.png" type="Texture" id=9]
[ext_resource path="res://art/buttons/sound_on.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 270, 103 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 270, 103 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 270, 103 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=16]

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 679.0, 577.0 ]
}

[node name="ColorRect" type="Node2D" parent="."]

[node name="Base" type="Node2D" parent="ColorRect"]

[node name="BlackCat" type="Sprite" parent="ColorRect/Base"]
position = Vector2( 640, 360 )
texture = ExtResource( 5 )

[node name="MessageLabel" type="Label" parent="ColorRect/Base"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 354.0
margin_right = 1281.0
margin_bottom = 513.0
custom_fonts/font = SubResource( 1 )
text = "Meow
"
align = 1

[node name="StartButton" type="Button" parent="ColorRect/Base"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 510.0
margin_top = 462.0
margin_right = 768.0
margin_bottom = 562.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Start"

[node name="Animation" type="Node2D" parent="ColorRect"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="ColorRect/Animation"]
position = Vector2( 640, 360 )
frames = SubResource( 6 )
speed_scale = 0.5
playing = true

[node name="PlayAgain" type="Button" parent="ColorRect/Animation"]
margin_left = 347.0
margin_top = 457.0
margin_right = 617.0
margin_bottom = 560.0
focus_mode = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
shortcut_in_tooltip = false
enabled_focus_mode = 0

[node name="PointsWhite" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -348.0
margin_right = -1.0
margin_bottom = -189.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.831373, 0.6, 0.92549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score: "
align = 1

[node name="Paused" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.733333, 0.796078, 0.713726 )

[node name="PausedText" type="RichTextLabel" parent="Paused"]
margin_left = 11.0
margin_top = 678.0
margin_right = 381.0
margin_bottom = 733.0
custom_fonts/normal_font = SubResource( 10 )
text = "Paused"

[node name="Sound" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 455.0
margin_top = -188.0
margin_right = 634.0
margin_bottom = -6.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
shortcut_in_tooltip = false
enabled_focus_mode = 0

[node name="SoundOff" type="Sprite" parent="Sound"]
position = Vector2( 93, 96 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="SoundOn" type="Sprite" parent="Sound"]
visible = false
position = Vector2( 93, 96 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="SoundBlinkTimer" type="Timer" parent="."]
one_shot = true

[node name="Touch" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TouchPauseButton" type="Button" parent="Touch"]
visible = false
margin_left = 6.0
margin_top = 560.0
margin_right = 145.0
margin_bottom = 697.0
focus_mode = 0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 16 )
action_mode = 0
enabled_focus_mode = 0

[node name="ColorRect2" type="ColorRect" parent="Touch/TouchPauseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -42.5
margin_right = -13.5
margin_bottom = 42.5
mouse_filter = 1

[node name="ColorRect3" type="ColorRect" parent="Touch/TouchPauseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 12.5
margin_top = -42.5
margin_right = 37.5
margin_bottom = 42.5
mouse_filter = 1

[node name="TouchUnpauseButton" type="Button" parent="Touch"]
visible = false
margin_left = 6.0
margin_top = 560.0
margin_right = 145.0
margin_bottom = 697.0
focus_mode = 0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 16 )
enabled_focus_mode = 0

[node name="ColorRect2" type="ColorRect" parent="Touch/TouchUnpauseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -42.5
margin_right = -13.5
margin_bottom = 42.5
mouse_filter = 1

[node name="ColorRect3" type="ColorRect" parent="Touch/TouchUnpauseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 12.5
margin_top = -42.5
margin_right = 37.5
margin_bottom = 42.5
mouse_filter = 1

[connection signal="pressed" from="ColorRect/Base/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ColorRect/Animation/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Sound" to="." method="_on_Sound_pressed"]
[connection signal="timeout" from="SoundBlinkTimer" to="." method="_on_SoundBlinkTimer_timeout"]
[connection signal="pressed" from="Touch/TouchPauseButton" to="." method="_on_TouchPauseButton_pressed"]
[connection signal="pressed" from="Touch/TouchUnpauseButton" to="." method="_on_TouchPauseButton_pressed"]
